--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,12 @@
     margin: 0px;
 }
 .App {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+        "hd hd hd hd hd"
+        "main . . . .";
 }
 .bigYouTube {
     box-sizing: border-box;
@@ -14,4 +17,12 @@
 }
 button:hover {
     cursor: pointer;
+}
+.positionButton {
+    grid-area: main;
+    width: 50px;
+    height: 50px;
+}
+.divHeader {
+    grid-area: hd;
 }
