--- a/src/components/MyButtonSkew/MyButtonSkew.css
+++ b/src/components/MyButtonSkew/MyButtonSkew.css
@@ -11,7 +11,7 @@
     z-index: 1;
     margin: 5px;
     transform: skew(-15deg, 0);
-    box-shadow: 2px 4px 0px black;
+    box-shadow: 0px 0px 0px transparent;
     transition: all 0.5s;
 }
 .myButton::before {
@@ -30,8 +30,12 @@
     transform: scaleZ(0.3);
 }
 .myButton:hover {
+    box-shadow: 2px 4px 0px black;
+}
+.myButton:active {
     box-shadow: 0px 0px 0px transparent;
 }
+
 .myButton:hover::before {
     width: 100%;
 }
